# gramatica-latina

./: pyproject.toml
gramatica_latina/: gramática latina.odt
